--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "~=3.2.7"
 psycopg2-binary = "==2.9.1"
 django-crispy-forms = "==1.11.1"
 django-allauth = "==0.43.0"
+environs = {version = "==8.0.0", extras = ["django"]}
 
 [dev-packages]
 
